--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/support": "5.0.*",
+    "illuminate/support": "5.0.x|5.1.x",
     "guzzlehttp/guzzle": "~5.2",
     "phpunit/phpunit": "~4.6"
   },
