--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/support": "5.0.x|5.1.x",
+    "illuminate/support": "^5.0|^5.1|^5.2",
     "guzzlehttp/guzzle": "~5.2"
   },
   "autoload": {
